<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="quant">0</string>
    <string name="orderButton">Order</string>
    <string name="price">Price</string>
    <string name="priceOf">$0</string>
    <string name="increament">+</string>
    <string name="decreament">-</string>
    <string name="finalAnswer" />
    <string name="coffee_image">Coffee image</string>
    <string name="final_price">Final Price:</string>
    <string name="quantitySumaary">Quantity:</string>
    <string name="name">Name :</string>
    <string name="order_summary">Order Summary</string>
    <string name="get_name">Name                     </string>
</resources>